--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -26,11 +26,14 @@
                 android:text="@string/next" />
 
             <TextView
+                android:paddingVertical="8dp"
+                android:paddingEnd="8dp"
                 android:fontFamily="sans-serif-light"
                 android:drawableStart="@drawable/ic_back_thin"
                 android:id="@+id/create_timenote_btn_back"
                 style="@style/AppTheme.Toolbar.TextRight"
-                android:text="" />
+                android:text=""
+                tools:ignore="RtlSymmetry" />
 
 
         </androidx.appcompat.widget.Toolbar>
