--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,6 @@
                 <TextView
                     android:id="@+id/profile_name_toolbar"
                     style="@style/AppTheme.Toolbar.Title"
-                    android:text="Ronny"
                     app:layout_constraintBottom_toTopOf="@id/profile_location"
                     app:layout_constraintEnd_toStartOf="@id/profile_settings_btn"
                     app:layout_constraintStart_toEndOf="@id/profile_notif_btn"
@@ -51,7 +50,6 @@
                     android:layout_marginBottom="8dp"
                     android:drawableStart="@drawable/ic_toolbar_location"
                     android:fontFamily="sans-serif-light"
-                    android:text=" Israel"
                     android:visibility="visible"
                     android:textColor="@color/colorText"
                     android:textSize="14sp"
@@ -86,7 +84,7 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/white"
+        android:background="@color/colorBackground"
         android:fitsSystemWindows="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +121,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
-                        android:text="654"
                         android:textColor="@color/colorText"
                         android:textSize="17sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +144,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="15dp"
-                        android:text="233"
                         android:textColor="@color/colorText"
                         android:textSize="17sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -223,11 +219,11 @@
 
 
                     <ImageView
+                        android:src="@drawable/circle_pic"
                         android:id="@+id/profile_pic_imageview"
                         android:layout_width="108dp"
                         android:layout_height="108dp"
                         android:layout_marginTop="12dp"
-                        android:src="@drawable/ic_pref_holiday_clicked"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -351,6 +347,19 @@
 
             </com.timenoteco.timenote.androidView.CollapsibleToolbar>
         </com.google.android.material.appbar.AppBarLayout>
+
+        <TextView
+            android:layout_marginTop="100dp"
+            android:id="@+id/profile_account_private"
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:padding="24dp"
+            android:textColor="@color/colorText"
+            android:gravity="center"
+            android:text="This account is private. \n Ask to follow to see."
+            android:drawableTop="@drawable/ic_baseline_lock_24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <androidx.core.widget.NestedScrollView
             android:background="@color/colorBackground"
