--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -254,6 +254,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <ImageView
+                        android:visibility="gone"
+                        android:id="@+id/create_timenote_title_error"
+                        android:src="@drawable/ic_baseline_error_24"
+                        app:layout_constraintTop_toTopOf="@id/create_timenote_title_btn"
+                        app:layout_constraintBottom_toBottomOf="@id/create_timenote_title_btn"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -404,6 +414,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
+                    <ImageView
+                        android:visibility="gone"
+                        android:id="@+id/create_timenote_when_error"
+                        android:src="@drawable/ic_baseline_error_24"
+                        app:layout_constraintTop_toTopOf="@id/when_label"
+                        app:layout_constraintBottom_toBottomOf="@id/when_label"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -476,7 +496,6 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:text="Only me"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_share_with"
                         android:drawablePadding="8dp"
