--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -78,13 +78,13 @@
             android:layout_height="24dp"/>
 
         <TextView
+            android:id="@+id/profile_item_name_owner"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             app:layout_constraintStart_toEndOf="@id/profile_item_pic_profile_imageview"
             android:textSize="13sp"
             android:textColor="@color/colorText"
             android:layout_marginStart="4dp"
-            android:text="Samuel"
             app:layout_constraintTop_toTopOf="@id/profile_item_pic_profile_imageview"
             app:layout_constraintBottom_toBottomOf="@id/profile_item_pic_profile_imageview"
             android:layout_width="wrap_content"
