--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_margin="7dp"
         android:layout_height="50dp"/>
     <TextView
-        android:textColor="@color/colorText"
+        android:textColor="@android:color/black"
         android:textSize="16sp"
         android:fontFamily="sans-serif-light"
         android:layout_width="wrap_content"
