--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,7 +80,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:nestedScrollingEnabled="true"
-        android:background="@color/white"
+        android:background="@color/colorBackground"
         android:id="@+id/home_recent_rv"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -88,7 +88,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:nestedScrollingEnabled="true"
-        android:background="@color/white"
+        android:background="@color/colorBackground"
         tools:listitem="@layout/item_timenote"
         android:orientation="vertical"
         android:id="@+id/home_rv"
