--- a/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
@@ -79,10 +79,10 @@
             app:argType="string"
             app:nullable="true" />
         <argument
-            android:defaultValue="@null"
             android:name="timenoteBody"
-            app:argType="com.timenoteco.timenote.model.TimenoteBody"
-            app:nullable="true" />
+            app:argType="com.timenoteco.timenote.model.CreationTimenoteDTO"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_createTimenote_to_navigation"
             app:destination="@id/navigation" />
