--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -112,6 +112,10 @@
         <action
             android:id="@+id/action_detailedTimenoteSearch_to_createTimenoteSearch"
             app:destination="@id/createTimenoteSearch" />
+        <argument
+            android:name="event"
+            app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/profileSearch"
