--- a/app/src/main/res/layout-sw480dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_detailed_fragment.xml
@@ -154,6 +154,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
+                android:id="@+id/timenote_detailed_send_comment"
                 android:src="@drawable/ic_round_send_24"
                 android:layout_weight="1"
                 android:layout_width="0dp"
