--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/home_posted_recently"
+                android:text="@string/posted_recently"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="8dp"
+                android:textSize="14sp"
+                android:textColor="@color/colorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/item_timenote_recent"
         android:nestedScrollingEnabled="true"
         android:background="@color/colorBackground"
         android:id="@+id/home_recent_rv"
