--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,6 +53,7 @@
                     android:visibility="visible"
                     android:textColor="@color/colorText"
                     android:textSize="14sp"
+                    android:drawablePadding="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/profile_name_toolbar"
                     app:layout_constraintStart_toStartOf="@id/profile_name_toolbar"
@@ -312,7 +313,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-light"
-                        android:text="Founder of Timenote"
                         android:textColor="@color/colorText"
                         android:textSize="15sp"
                         app:layout_constraintEnd_toEndOf="parent"
