--- a/app/src/main/res/drawable/circle_pic.xml
+++ b/app/src/main/res/drawable/circle_pic.xml
@@ -4,7 +4,7 @@
     <solid
         android:color="@android:color/darker_gray"/>
     <stroke
-        android:color="@color/colorYellow"
+        android:color="@android:color/darker_gray"
         android:width="@dimen/day_circle_stroke_width" />
     <corners
         android:radius="@dimen/day_circle_radius" />
