--- a/app/src/main/res/layout-sw300dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw300dp/item_timenote_root.xml
@@ -204,7 +204,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@id/timenote_plus"
         app:layout_constraintStart_toStartOf="@id/timenote_comment"
@@ -231,6 +230,7 @@
             android:src="@drawable/beach" />
 
         <TextView
+            android:layout_gravity="center"
             android:id="@+id/timenote_added_by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
