--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -21,11 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:textColor="@color/colorText"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/timenote_pic_user_imageview"
         tools:text="Samuel" />
 
     <TextView
@@ -38,6 +37,7 @@
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toBottomOf="@id/timenote_username"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_user_imageview"
         tools:text="34 Ohio Street" />
 
     <ImageView
