--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -138,24 +138,44 @@
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
 
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:textColor="@color/colorText"
-                android:id="@+id/profile_modify_from"
-                android:drawablePadding="8dp"
-                android:hint="@string/from"
-                android:textSize="15sp"
-                android:padding="16dp"
-                android:backgroundTint="#60000000"
-                android:drawableStart="@drawable/ic_profile_from"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/from_cl"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_modify_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:fontFamily="sans-serif-light"
+                    android:textColor="@color/colorText"
+                    android:id="@+id/profile_modify_from"
+                    android:drawablePadding="8dp"
+                    android:hint="@string/from"
+                    android:textSize="15sp"
+                    android:padding="16dp"
+                    android:backgroundTint="#60000000"
+                    android:drawableStart="@drawable/ic_profile_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <Switch
+                    android:id="@+id/profile_from_switch"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <TextView
-                app:layout_constraintTop_toBottomOf="@id/profile_modify_from"
+                app:layout_constraintTop_toBottomOf="@id/from_cl"
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
 
@@ -172,7 +192,7 @@
                 android:drawableStart="@drawable/ic_profile_birthday"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profile_modify_from"
+                app:layout_constraintTop_toBottomOf="@id/from_cl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
