--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -13,8 +13,8 @@
         android:id="@+id/user_imageview"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="16dp"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,13 +24,25 @@
         android:id="@+id/name_user"
         android:gravity="center"
         android:textColor="@color/colorText"
-        tools:text="Ligue 1"
-        android:textSize="14sp"
+        tools:text="samo23"
+        android:textSize="15sp"
         android:layout_marginStart="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/user_imageview"
         app:layout_constraintStart_toEndOf="@id/user_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/user_imageview" />
+
+    <TextView
+        tools:text="Samuel Zaffran"
+        android:layout_marginStart="15dp"
+        android:textSize="13sp"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/name_user"
+        android:id="@+id/givenName"
+        app:layout_constraintBottom_toBottomOf="@id/user_imageview"
+        app:layout_constraintStart_toEndOf="@id/user_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     
 </androidx.constraintlayout.widget.ConstraintLayout>
