--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -41,7 +41,6 @@
     <TextView
         android:textSize="20sp"
         android:textColor="@color/colorText"
-        android:text="Ronny Dahan"
         android:id="@+id/profile_menu_name"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/profile_menu_iv"
@@ -50,12 +49,12 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:drawablePadding="4dp"
         android:id="@+id/profile_menu_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_toolbar_location"
         android:fontFamily="sans-serif-light"
-        android:text=" Israel"
         app:layout_constraintTop_toBottomOf="@id/profile_menu_name"
         app:layout_constraintStart_toStartOf="@id/profile_menu_name"
         android:textColor="@color/colorText"
