--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -97,6 +97,11 @@
         <action
             android:id="@+id/action_profile_to_navigation"
             app:destination="@id/navigation" />
+        <argument
+            android:name="timenoteInfoDTO"
+            app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -204,7 +209,7 @@
             app:destination="@id/previewTimenoteCreated" />
         <argument
             android:name="modify"
-            app:argType="boolean" />
+            app:argType="integer" />
         <argument
             android:name="id"
             app:argType="string"
