--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -79,11 +79,17 @@
             android:id="@+id/action_search_to_searchExploreClicked"
             app:destination="@id/searchExploreClicked" />
         <action
-            android:id="@+id/action_search_to_detailedTimenote"
-            app:destination="@id/detailedTimenote" />
-        <action
             android:id="@+id/action_search_to_profileSearch"
             app:destination="@id/profileSearch" />
+        <action
+            android:id="@+id/action_search_to_timenoteAddressSearch"
+            app:destination="@id/timenoteAddressSearch" />
+        <action
+            android:id="@+id/action_search_to_detailedTimenoteSearch"
+            app:destination="@id/detailedTimenoteSearch" />
+        <action
+            android:id="@+id/action_search_to_createTimenoteSearch"
+            app:destination="@id/createTimenoteSearch" />
     </fragment>
     <fragment
         android:id="@+id/searchExplore"
@@ -113,7 +119,7 @@
             android:id="@+id/action_detailedTimenoteSearch_to_createTimenoteSearch"
             app:destination="@id/createTimenoteSearch" />
         <argument
-            android:name="event"
+            android:name="timenoteInfoDTO"
             app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
             app:nullable="true" />
     </fragment>
@@ -135,9 +141,8 @@
             app:destination="@id/createTimenoteSearch" />
         <argument
             android:name="userInfoDTO"
-            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/followPageSearch"
@@ -164,7 +169,7 @@
             app:destination="@id/previewTimenoteCreatedSearch" />
         <argument
             android:name="modify"
-            app:argType="boolean" />
+            app:argType="integer" />
         <argument
             android:name="id"
             app:argType="string"
@@ -176,5 +181,14 @@
         <argument
             android:name="from"
             app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/timenoteAddressSearch"
+        android:name="com.timenoteco.timenote.view.searchFlow.TimenoteAddressSearch"
+        android:label="TimenoteAddressSearch" >
+        <argument
+            android:name="timenoteInfoDTO"
+            app:argType="com.timenoteco.timenote.model.TimenoteInfoDTO"
+            app:nullable="true" />
     </fragment>
 </navigation>
