--- a/app/src/main/res/layout/item_user_send.xml
+++ b/app/src/main/res/layout/item_user_send.xml
@@ -44,5 +44,19 @@
         app:layout_constraintStart_toEndOf="@id/user_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    
+
+
+    <ImageView
+        android:src="@drawable/ic_add_circle_yellow_send"
+        android:paddingVertical="6dp"
+        android:paddingHorizontal="8dp"
+        android:gravity="center"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/user_imageview"
+        app:layout_constraintTop_toTopOf="@id/user_imageview"
+        android:id="@+id/item_user_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
