--- a/app/src/main/res/layout/fragment_follow_page.xml
+++ b/app/src/main/res/layout/fragment_follow_page.xml
@@ -9,14 +9,14 @@
 
     <LinearLayout
         android:id="@+id/followPage_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
+        style="@style/AppTheme.Toolbar.LinearLayout"
+        tools:ignore="MissingConstraints">
 
     <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
         <TextView
             android:id="@+id/followPage_toolbar"
-            style="@style/AppTheme.Toolbar.Title"
-            android:text="Followers" />
+            style="@style/AppTheme.Toolbar.Title" />
 
     </androidx.appcompat.widget.Toolbar>
 
