--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -122,10 +122,29 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <TextView
+                android:id="@+id/card_line_9"
+                app:layout_constraintTop_toBottomOf="@id/private_account_cl"
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/profile_settings_awaiting"
+                android:background="@color/colorElevated"
+                android:padding="16dp"
+                android:textColor="@color/colorText"
+                android:text="@string/waiting_for_approval"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_line_9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
 
             <TextView
                 android:id="@+id/card_line_2"
-                app:layout_constraintTop_toBottomOf="@id/private_account_cl"
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_awaiting"
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
 
